--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <section class="card-container">
+    <section class="dealer-cards">
         <div class="hidden">
             <img src="/css/card-library/images/backs/red.svg" alt="">
         </div>
