--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 
 </head>
 <body>
+    <p id="dealer-sum">dealer</p>
     <section class="dealer-cards">
-        <div class="hidden">
-            <img src="/css/card-library/images/backs/red.svg" alt="">
+        <div id="hidden">
+            <img src="/css/card-library/images/backs/red.svg" alt="hidden card">
         </div>
+        <div>
+            <img src="css/card-library/images/clubs/clubs-A.svg" alt="">
+        </div>
+    </section>
+    <p id="dealer-sum">player</p>
+    <section class="player-cards">
+        <img src="css/card-library/images/diamonds/diamonds-J.svg" alt="">
+        <img src="css/card-library/images/clubs/clubs-r07.svg" alt="">
     </section>
     
 </body>
