--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <img src="css/card-library/images/diamonds/diamonds-J.svg" alt="">
         <img src="css/card-library/images/clubs/clubs-r07.svg" alt="">
     </section>
-    
+    <section class="button">
+        <button id="deal">Deal</button>
+        <button id="hit">Hit</button>
+        <button id="stay">Stay</button>
+    </section>
 </body>
 </html>
