--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="player-cards">
         <img src="css/card-library/images/diamonds/diamonds-J.svg" alt="">
         <img src="css/card-library/images/clubs/clubs-r07.svg" alt="">
-        <p id="dealer-sum">player</p>
+        <p id="player-sum">player</p>
 </section>
 <br>
 <section class="button">
