--- a/index.html
+++ b/index.html
@@ -7,27 +7,31 @@
     <title>Black-Jack</title>
     <link rel="stylesheet" href="css/card-library/css/cardstarter.min.css" text="text/css" />
     <link rel="stylesheet" href="css/main.css" text="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
     <script defer src="blackj.js"></script>
 
 </head>
 <body>
-    <p id="dealer-sum">dealer</p>
+    <header>Black-Jack</header>
+    <p id="dealer-sum">Dealer:</p>
     <section class="dealer-cards">
         <img id="hidden" src="/css/card-library/images/backs/red.svg" alt="hidden card">
         <img src="css/card-library/images/clubs/clubs-A.svg" alt="">
     </section>
-    <p id="results">outcome</p>
+    <p id="results">Outcome</p>
     <section class="player-cards">
         <img src="css/card-library/images/diamonds/diamonds-J.svg" alt="">
         <img src="css/card-library/images/clubs/clubs-r07.svg" alt="">
-        <p id="player-sum">player</p>
+        <p id="player-sum">Player:</p>
 </section>
 <br>
-<section class="button">
+<footer class="button">
     <button id="deal">Deal</button>
     <button id="hit">Hit</button>
     <button id="stay">Stay</button>
-</section>
+</footer>
 </body>
 </html>
         
