changed card suits/values

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <header>Black-Jack</header>
     <p id="dealer-sum">Dealer:</p>
     <section class="dealer-cards">
-        <img id="hidden" src="/css/card-library/images/backs/red.svg" alt="hidden card">
-        <img src="css/card-library/images/clubs/clubs-A.svg" alt="">
+        <!-- <img id="hidden" src="/css/card-library/images/backs/red.svg" alt="hidden card">
+        <img src="css/card-library/images/clubs/clubs-A.svg" alt=""> -->
     </section>
     <p id="results">Outcome</p>
     <section class="player-cards">
-        <img src="css/card-library/images/diamonds/diamonds-J.svg" alt="">
-        <img src="css/card-library/images/clubs/clubs-r07.svg" alt="">
+        <!-- <img src="css/card-library/images/diamonds/diamonds-J.svg" alt="">
+        <img src="css/card-library/images/clubs/clubs-r07.svg" alt=""> -->
         <p id="player-sum">Player:</p>
 </section>
 <br>
